chore: enhance profile teacher
