# app/src/main/java/com/rizalanggoro/presensigo/presentation/pages/home/teacher/setting/TeacherHomeSettingViewModel.kt
@@ -2,12 +2,13 @@ package com.rizalanggoro.presensigo.presentation.pages.home.teacher.setting
 
 import androidx.lifecycle.ViewModel
 import androidx.lifecycle.viewModelScope
-import com.rizalanggoro.presensigo.core.constants.StateStatus
+import com.rizalanggoro.presensigo.core.constants.UiState
 import com.rizalanggoro.presensigo.core.failure.toFailure
 import com.rizalanggoro.presensigo.data.managers.TokenManager
-import com.rizalanggoro.presensigo.data.managers.TokenPayloadManager
-import com.rizalanggoro.presensigo.domain.TeacherTokenPayload
 import com.rizalanggoro.presensigo.openapi.apis.AccountApi
+import com.rizalanggoro.presensigo.openapi.apis.SchoolApi
+import com.rizalanggoro.presensigo.openapi.models.GetAccountRes
+import com.rizalanggoro.presensigo.openapi.models.GetSchoolRes
 import com.rizalanggoro.presensigo.openapi.models.LogoutReq
 import io.ktor.client.plugins.ResponseException
 import io.ktor.client.statement.bodyAsText
@@ -16,87 +17,88 @@ import kotlinx.coroutines.flow.asStateFlow
 import kotlinx.coroutines.flow.update
 import kotlinx.coroutines.launch
 
-data class State(
-    val status: StateStatus = StateStatus.Initial,
-    val action: Action = Action.Initial,
-    val message: String = "",
-
-    val payload: TeacherTokenPayload = TeacherTokenPayload(),
-) {
-    enum class Action {
-        Initial, GetAccount, Logout
-    }
-}
-
 class TeacherHomeSettingViewModel(
     private val accountApi: AccountApi,
-    private val tokenManager: TokenManager,
-
-    private val tokenPayloadManager: TokenPayloadManager,
+    private val schoolApi: SchoolApi,
+    private val tokenManager: TokenManager
 ) : ViewModel() {
-    private val _state = MutableStateFlow(State())
-    val state get() = _state.asStateFlow()
+    private val _account = MutableStateFlow<UiState<GetAccountRes>>(UiState.Loading)
+    val account get() = _account.asStateFlow()
 
-    init {
-        loadTokenPayload()
-    }
-
-    fun resetState() = _state.update {
-        it.copy(
-            status = StateStatus.Initial,
-            action = State.Action.Initial
-        )
-    }
-
-    private fun loadTokenPayload() = viewModelScope.launch {
-        val token = tokenManager.get()
-        if (token.accessToken.isNotEmpty()) {
-            val payload = tokenPayloadManager.decodeTeacher(token.accessToken)
-            _state.update { it.copy(payload = payload) }
-        }
-    }
-
-
-    fun logout() = viewModelScope.launch {
+    fun getAccount() = viewModelScope.launch {
         try {
-            _state.update {
-                it.copy(
-                    status = StateStatus.Loading,
-                    action = State.Action.Logout
-                )
-            }
+            _account.update { UiState.Loading }
 
-            accountApi.logout(
-                LogoutReq(
-                    refreshToken = tokenManager.get().refreshToken
-                )
-            )
-            tokenManager.clear()
+            val body = accountApi.getAccount().body()
 
-            _state.update {
-                it.copy(
-                    status = StateStatus.Success,
-                    action = State.Action.Logout
-                )
-            }
+            _account.update { UiState.Success(data = body) }
         } catch (e: ResponseException) {
             e.printStackTrace()
-            _state.update {
-                it.copy(
-                    status = StateStatus.Failure,
-                    action = State.Action.Logout,
+            _account.update {
+                UiState.Failure(
                     message = e.response.bodyAsText().toFailure().message
                 )
             }
         } catch (e: Exception) {
             e.printStackTrace()
-            _state.update {
-                it.copy(
-                    status = StateStatus.Failure,
-                    action = State.Action.Logout,
-                    message = "Terjadi kesalahan tak terduga!"
+            _account.update { UiState.Failure() }
+        }
+    }
+
+    private val _school = MutableStateFlow<UiState<GetSchoolRes>>(UiState.Loading)
+    val school get() = _school.asStateFlow()
+
+    fun getSchool() = viewModelScope.launch {
+        try {
+            _school.update { UiState.Loading }
+
+            val body = schoolApi.getSchool().body()
+
+            _school.update { UiState.Success(data = body) }
+        } catch (e: ResponseException) {
+            e.printStackTrace()
+            _school.update {
+                UiState.Failure(
+                    message = e.response.bodyAsText().toFailure().message
                 )
             }
+        } catch (e: Exception) {
+            e.printStackTrace()
+            _school.update { UiState.Failure() }
+        }
+    }
+
+    init {
+        getAccount()
+        getSchool()
+    }
+
+    // logout
+    private val _logout = MutableStateFlow<UiState<Unit>>(UiState.Initial)
+    val logout get() = _logout.asStateFlow()
+
+    fun logout() = viewModelScope.launch {
+        try {
+            _logout.update { UiState.Loading }
+
+            val token = tokenManager.get()
+            accountApi.logout(
+                body = LogoutReq(
+                    refreshToken = token.refreshToken
+                )
+            )
+
+            _logout.update { UiState.Success(Unit) }
+        } catch (e: ResponseException) {
+            e.printStackTrace()
+            _logout.update {
+                UiState.Failure(
+                    message = e.response.bodyAsText().toFailure().message
+                )
+            }
+        } catch (e: Exception) {
+            e.printStackTrace()
+            _logout.update { UiState.Failure() }
         }
     }
 }
