# openapi/src/main/kotlin/com/rizalanggoro/presensigo/openapi/models/GetAccountRes.kt
@@ -1,0 +1,38 @@
+/**
+ *
+ * Please note:
+ * This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * Do not edit this file manually.
+ *
+ */
+
+@file:Suppress(
+    "ArrayInDataClass",
+    "EnumEntryName",
+    "RemoveRedundantQualifierName",
+    "UnusedImport"
+)
+
+package com.rizalanggoro.presensigo.openapi.models
+
+import com.rizalanggoro.presensigo.openapi.models.User
+
+import com.google.gson.annotations.SerializedName
+
+/**
+ * 
+ *
+ * @param user 
+ */
+
+
+data class GetAccountRes (
+
+    @SerializedName("user")
+    val user: User
+
+) {
+
+
+}
+
