# openapi/src/main/kotlin/com/rizalanggoro/presensigo/openapi/models/GetSchoolRes.kt
@@ -1,0 +1,38 @@
+/**
+ *
+ * Please note:
+ * This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * Do not edit this file manually.
+ *
+ */
+
+@file:Suppress(
+    "ArrayInDataClass",
+    "EnumEntryName",
+    "RemoveRedundantQualifierName",
+    "UnusedImport"
+)
+
+package com.rizalanggoro.presensigo.openapi.models
+
+import com.rizalanggoro.presensigo.openapi.models.School
+
+import com.google.gson.annotations.SerializedName
+
+/**
+ * 
+ *
+ * @param school 
+ */
+
+
+data class GetSchoolRes (
+
+    @SerializedName("school")
+    val school: School
+
+) {
+
+
+}
+
